min-height: 100vk commented out in .website. whitespace issue still

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,14 +2,15 @@
 body {
   min-height: 100%;
   height: 100%;
+  margin: 0px;
+  padding: 0px;
   overflow-x: hidden;
 }
 
 .website {
   display: flex;
   height: 100%;
-  min-height: 100vh;
-  overflow-x: hidden;
+  /* min-height: 100vh; */
 }
 
 .mb {
